Change variable name Change bolt sum algorithm Bolt_sum now store householdData